Eliminacion de campos

--- a/src/app/configuracion/clientes/clientes.component.html
+++ b/src/app/configuracion/clientes/clientes.component.html
@@ -134,10 +134,10 @@
                                         </div>
                                     </div>
                                     <div class="inputs-container mt-4">
-                                        <div class="floating-label">
+                                        <!-- <div class="floating-label">
                                             <input type="text" class="inputM" id="paisNacimiento" formControlName="paisNacimiento" placeholder="Pais Nacimiento*" (input)="limitarCaracteres($event, 30)">
                                             <label for="paisNacimiento">Pais Nacimiento*</label>
-                                        </div>
+                                        </div> -->
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="estadoNacimiento" formControlName="estadoNacimiento" placeholder="Estado Nacimiento*" (input)="limitarCaracteres($event, 30)">
                                             <label for="estadoNacimiento">Estado Nacimiento*</label>
@@ -150,34 +150,20 @@
                                             <input type="text" class="inputM" id="rfc" formControlName="rfc" placeholder="RFC*" (input)="limitarCaracteres($event, 13)">
                                             <label for="rfc">RFC*</label>
                                         </div>
-                                    </div>                                    
-                                    <div class="inputs-container mt-4">
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="curp" formControlName="curp" placeholder="CURP*" (input)="limitarCaracteres($event, 18)">
                                             <label for="curp">CURP*</label>
                                         </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="claveElector" formControlName="claveElector" placeholder="Clave Elector" (input)="limitarCaracteres($event, 18)">
-                                            <label for="claveElector">Clave Elector</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="nacionalidad" formControlName="nacionalidad" placeholder="Nacionalidad*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="nacionalidad">Nacionalidad*</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="estadoCivil" formControlName="estadoCivil" placeholder="Estado Civil" (input)="limitarCaracteres($event, 30)">
-                                            <label for="estadoCivil">Estado Civil</label>
-                                        </div>
                                     </div>                                    
                                     <div class="inputs-container mt-4">
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="regimenMatrimonial" formControlName="regimenMatrimonial" placeholder="Regimen Matrimonial" (input)="limitarCaracteres($event, 30)">
-                                            <label for="regimenMatrimonial">Regimen Matrimonial</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="nombreConyuge" formControlName="nombreConyuge" placeholder="Nombre Conyuge" (input)="limitarCaracteres($event, 50)">
-                                            <label for="nombreConyuge">Nombre Conyuge</label>
-                                        </div>
+                                        <!-- <div class="floating-label">
+                                            <input type="text" class="inputM" id="claveElector" formControlName="claveElector" placeholder="Clave Elector" (input)="limitarCaracteres($event, 18)">
+                                            <label for="claveElector">Clave Elector</label>
+                                        </div> -->
+                                        <!-- <div class="floating-label">
+                                            <input type="text" class="inputM" id="nacionalidad" formControlName="nacionalidad" placeholder="Nacionalidad*" (input)="limitarCaracteres($event, 30)">
+                                            <label for="nacionalidad">Nacionalidad*</label>
+                                        </div> -->
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="calle" formControlName="calle" placeholder="Calle*" (input)="limitarCaracteres($event, 30)">
                                             <label for="calle">Calle*</label>
@@ -185,12 +171,6 @@
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="numExterior" formControlName="numExterior" placeholder="Num Exterior*" (input)="limitarCaracteres($event, 6)">
                                             <label for="numExterior">Num Exterior*</label>
-                                        </div>
-                                    </div>
-                                    <div class="inputs-container mt-4">
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="numInterior" formControlName="numInterior" placeholder="Num Interior" (input)="limitarCaracteres($event, 6)">
-                                            <label for="numInterior">Num Interior</label>
                                         </div>
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="colonia" formControlName="colonia" placeholder="Colonia*" (input)="limitarCaracteres($event, 30)">
@@ -200,20 +180,8 @@
                                             <input type="text" class="inputM" id="codigoPostal" formControlName="codigoPostal" placeholder="Código Postal*" (input)="limitarCaracteres($event, 5)">
                                             <label for="codigoPostal">Código Postal*</label>
                                         </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="paisResidencia" formControlName="paisResidencia" placeholder="Pais Residencia*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="paisResidencia">Pais Residencia*</label>
-                                        </div>
                                     </div>
                                     <div class="inputs-container mt-4">
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="estadoResidencia" formControlName="estadoResidencia" placeholder="Estado Residencia*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="estadoResidencia">Estado Residencia*</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="ciudadResidencia" formControlName="ciudadResidencia" placeholder="Ciudad Residencia*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="ciudadResidencia">Ciudad Residencia*</label>
-                                        </div>
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="email" formControlName="email" placeholder="Email*" (input)="limitarCaracteres($event, 30)">
                                             <label for="email">Email*</label>
@@ -222,10 +190,13 @@
                                             <input type="text" class="inputM" id="telefono" formControlName="telefono" placeholder="Telefono" (input)="limitarCaracteres($event, 10)">
                                             <label for="telefono">Telefono</label>
                                         </div>
+                                    </div>
+                                    <div class="inputs-container mt-4">
                                     </div>                        
                                 </div>
                             </div>
                         </div>
+
                         <!-- Formulario de Clientes Morales -->
                         <div class="mt-4" *ngIf="clienteForm?.get('regimenFiscal')?.value === 'MORAL'" formArrayName="datosClienteMorals">
                             <div *ngFor="let moral of datosClienteMorals.controls; let i = index" [formGroupName]="i">
@@ -248,10 +219,6 @@
                                             <label for="razonSocial">Razon Social*</label>
                                         </div>
                                         <div class="floating-label">
-                                            <input type="text" class="inputM" id="razonComercial" formControlName="razonComercial" placeholder="Razón Comercial" (input)="limitarCaracteres($event, 60)">
-                                            <label for="razonComercial">Razón Comercial</label>
-                                        </div>
-                                        <div class="floating-label">
                                             <input type="date" class="inputM" id="fechaConstitucion" formControlName="fechaConstitucion" placeholder="Fecha Constitución*">
                                             <label for="fechaConstitucion">Fecha Constitución*</label>
                                         </div>
@@ -259,51 +226,15 @@
                                             <input type="text" class="inputM" id="rfc" formControlName="rfc" placeholder="RFC*" (input)="limitarCaracteres($event, 13)">
                                             <label for="rfc">RFC*</label>
                                         </div>
-                                    </div>                                    
-                                    <div class="inputs-container mt-4">
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="nacionalidad" formControlName="nacionalidad" placeholder="Nacionalidad*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="nacionalidad">Nacionalidad*</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="paisRegistro" formControlName="paisRegistro" placeholder="Pais Registro*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="paisRegistro">Pais Registro*</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="estadoRegistro" formControlName="estadoRegistro" placeholder="Estado Registro*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="estadoRegistro">Estado Registro*</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="ciudadRegistro" formControlName="ciudadRegistro" placeholder="Ciudad Registro*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="ciudadRegistro">Ciudad Registro*</label>
-                                        </div>
-                                    </div>                                    
-                                    <div class="inputs-container mt-4">
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="numEscritura" formControlName="numEscritura" placeholder="Num Escritura*" (input)="limitarCaracteres($event, 10)">
                                             <label for="numEscritura">Num Escritura*</label>
                                         </div>
-                                        <div class="floating-label">
-                                            <input type="date" class="inputM" id="fechaRppc" formControlName="fechaRppc" placeholder="Fecha Rppc">
-                                            <label for="fechaRppc">Fecha Rppc</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="nombreNotario" formControlName="nombreNotario" placeholder="Nombre Notario" (input)="limitarCaracteres($event, 30)">
-                                            <label for="nombreNotario">Nombre Notario</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="numNotario" formControlName="numNotario" placeholder="Número Notario" (input)="limitarCaracteres($event, 10)">
-                                            <label for="numNotario">Número Notario</label>
-                                        </div>
-                                    </div>                                    
+                                    </div>
                                     <div class="inputs-container mt-4">
                                         <div class="floating-label">
-                                            <input type="text" class="inputM" id="folioMercantil" formControlName="folioMercantil" placeholder="Folio Mercantil" (input)="limitarCaracteres($event, 30)">
-                                            <label for="folioMercantil">Folio Mercantil</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="calle" formControlName="calle" placeholder="Calle*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="calle">Calle*</label>
+                                        <input type="text" class="inputM" id="calle" formControlName="calle" placeholder="Calle*" (input)="limitarCaracteres($event, 30)">
+                                        <label for="calle">Calle*</label>
                                         </div>
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="numExterior" formControlName="numExterior" placeholder="Num Exterior*" (input)="limitarCaracteres($event, 6)">
@@ -313,31 +244,17 @@
                                             <input type="text" class="inputM" id="numInterior" formControlName="numInterior" placeholder="Num Interior" (input)="limitarCaracteres($event, 6)">
                                             <label for="numInterior">Num Interior</label>
                                         </div>
-                                    </div>                                    
-                                    <div class="inputs-container mt-4">
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="colonia" formControlName="colonia" placeholder="Colonia*" (input)="limitarCaracteres($event, 30)">
                                             <label for="colonia">Colonia*</label>
                                         </div>
+                                    </div>                                    
+                                    <div class="inputs-container mt-4">
                                         <div class="floating-label">
                                             <input type="text" class="inputM" id="codigoPostal" formControlName="codigoPostal" placeholder="Código Postal*" (input)="limitarCaracteres($event, 5)">
                                             <label for="codigoPostal">Código Postal*</label>
                                         </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="paisResidencia" formControlName="paisResidencia" placeholder="Pais Residencia*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="paisResidencia">Pais Residencia*</label>
-                                        </div>
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="estadoResidencia" formControlName="estadoResidencia" placeholder="Estado Residencia*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="estadoResidencia">Estado Residencia*</label>
-                                        </div>
-                                    </div>                                    
-                                    <div class="inputs-container mt-4">
-                                        <div class="floating-label">
-                                            <input type="text" class="inputM" id="ciudadResidencia" formControlName="ciudadResidencia" placeholder="Ciudad Residencia*" (input)="limitarCaracteres($event, 30)">
-                                            <label for="ciudadResidencia">Ciudad Residencia*</label>
-                                        </div>
-                                    </div>                        
+                                    </div>
                                 </div>
                             </div>
                         </div>
