--- a/src/app/quejas-sugerencias/quejas-sugerencias.component.html
+++ b/src/app/quejas-sugerencias/quejas-sugerencias.component.html
@@ -116,6 +116,10 @@
                                 <label for="prioridad">Prioridad</label>
                             </div>
                             <div class="floating-label">
+                                <input type="text" class="inputM" id="estatus" placeholder="Estatus" formControlName="estatus">
+                                <label for="estatus">Estatus</label>
+                            </div>
+                            <div class="floating-label">
                                 <textarea class="inputM" id="comentarios" placeholder="Comentarios" formControlName="comentarios"></textarea>
                                 <label for="comentarios">Comentarios</label>
                             </div>                            
