--- a/src/app/creditos/simulador-vista/simulador-vista.component.html
+++ b/src/app/creditos/simulador-vista/simulador-vista.component.html
@@ -68,9 +68,17 @@
                     <label for="interesAnual">Interés Anual</label>
                 </div>
                 <div class="floating-label">
-                    <input type="number" class="inputM" id="iva" placeholder="I.V.A." formControlName="iva" (input)="limitarCaracteres($event, 2)">
+                    <input
+                        type="number"
+                        class="inputM"
+                        id="iva"
+                        placeholder="I.V.A."
+                        formControlName="iva"
+                        [attr.readonly]="true"
+                        (input)="limitarCaracteres($event, 2)"
+                    />
                     <label for="iva">I.V.A.</label>
-                </div>
+                </div>                
                 <!-- <div class="floating-label checkbox-container">
                     <input type="checkbox" id="ivaExento" formControlName="ivaExento">
                     <label for="ivaExento">I.V.A. Exento?</label>
